camel-quarkus-ws-to-event/target/kubernetes/kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/commit-id: 8d4a3a99936c929d3d248cff8157a4ed891b65e8
    app.quarkus.io/build-timestamp: 2022-05-16 - 22:54:20 +0000
  labels:
    app.kubernetes.io/name: camel-quarkus-ws-to-event
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: camel-quarkus-ws-to-event
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: camel-quarkus-ws-to-event
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/commit-id: 8d4a3a99936c929d3d248cff8157a4ed891b65e8
    app.quarkus.io/build-timestamp: 2022-05-16 - 22:54:20 +0000
  labels:
    app.kubernetes.io/name: camel-quarkus-ws-to-event
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: camel-quarkus-ws-to-event
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: camel-quarkus-ws-to-event
      app.kubernetes.io/version: 1.0.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.quarkus.io/commit-id: 8d4a3a99936c929d3d248cff8157a4ed891b65e8
        app.quarkus.io/build-timestamp: 2022-05-16 - 22:54:20 +0000
      labels:
        app.kubernetes.io/name: camel-quarkus-ws-to-event
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
    spec:
      containers:
        - command:
            - java
            - -Dquarkus.http.host=0.0.0.0
            - -Djava.util.logging.manager=org.jboss.logmanager.LogManager
            - -jar
            - /deployments/quarkus-run.jar
          image: omelo/camel-quarkus-ws-to-event:1.0.0-SNAPSHOT
          imagePullPolicy: Always
          name: camel-quarkus-ws-to-event
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    app.quarkus.io/commit-id: 8d4a3a99936c929d3d248cff8157a4ed891b65e8
    app.quarkus.io/build-timestamp: 2022-05-16 - 22:54:20 +0000
  labels:
    app.kubernetes.io/name: camel-quarkus-ws-to-event
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: camel-quarkus-ws-to-event
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: camel-quarkus-ws-to-event
                port:
                  name: http
            path: /
            pathType: Prefix
