camel-quarkus-ws-to-event/target/kubernetes/openshift.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: 5753f6dd718569b40aa9db11380e74244232f20e
    app.quarkus.io/build-timestamp: 2022-08-01 - 15:38:32 +0000
  labels:
    app.kubernetes.io/name: camel-quarkus-ws-to-event
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: camel-quarkus-ws-to-event
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: camel-quarkus-ws-to-event
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: 5753f6dd718569b40aa9db11380e74244232f20e
    app.quarkus.io/build-timestamp: 2022-08-01 - 15:38:32 +0000
  labels:
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.kubernetes.io/name: camel-quarkus-ws-to-event
    app.openshift.io/runtime: quarkus
  name: camel-quarkus-ws-to-event
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: camel-quarkus-ws-to-event
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.openshift.io/vcs-url: <<unknown>>
        app.quarkus.io/commit-id: 5753f6dd718569b40aa9db11380e74244232f20e
        app.quarkus.io/build-timestamp: 2022-08-01 - 15:38:32 +0000
      labels:
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
        app.kubernetes.io/name: camel-quarkus-ws-to-event
        app.openshift.io/runtime: quarkus
    spec:
      containers:
        - command:
            - java
            - -Dquarkus.http.host=0.0.0.0
            - -Djava.util.logging.manager=org.jboss.logmanager.LogManager
            - -jar
            - /deployments/quarkus-run.jar
          image: omelo/camel-quarkus-ws-to-event:1.0.0-SNAPSHOT
          imagePullPolicy: IfNotPresent
          name: camel-quarkus-ws-to-event
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - camel-quarkus-ws-to-event
        from:
          kind: ImageStreamTag
          name: camel-quarkus-ws-to-event:1.0.0-SNAPSHOT
      type: ImageChange
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: 5753f6dd718569b40aa9db11380e74244232f20e
    app.quarkus.io/build-timestamp: 2022-08-01 - 15:38:32 +0000
  labels:
    app.kubernetes.io/name: camel-quarkus-ws-to-event
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: camel-quarkus-ws-to-event
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: camel-quarkus-ws-to-event
